[Mac] Center bookmark bar item focus rings on 10.12 and up.

On Sierra and higher the bookmark bar item focus rings are 1pt higher
than they should be. This cl adjusts them down by 1 pt.

R=avi@chromium.org

Bug: 749142
Change-Id: I92c7f00be540bdcaf55c872018b20464ef05bd5b
Reviewed-on: https://chromium-review.googlesource.com/587036
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Jayson Adams <shrike@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489687}